--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li class="links">Contacts</li>
 
     </ul>
-    <img class="Pictures" src="/Project-57/pic.JPG">
+    <img class="Pictures" src="https://ariprasingh-github.github.io/Project-57/pic.JPG">
 <h1> My Favorite hobby is reading</h1>
     <section class="About">
         <h1> About </h1>
