--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <ul class="menu">
         <li class="links">Home</li>
-        <li class="links">My videos</li>
-        <li class="links">Contacts</li>
+        <li class="links"><a href="#Hobby">Hobby</a> </li>
+        <li class="links"><a href="#Review">Review</a></li>
 
     </ul>
     <img class="Pictures" src="https://ariprasingh-github.github.io/Project-57/pic.JPG">
@@ -18,4 +18,17 @@
     <section class="About">
         <h1> About </h1>
         <h4> My favorite hobby is reading awesome books in my free time. i go to the school of Myford Elementary, where there are ton and tons of books to read for grades kindergarden-5th graders. My favorite books are mostly fiction (Wings of fire), nonfiction (National Geographic), and historical-fiction (I survived). </h4>
+    </section>
+
+    <section id="Hobby"> 
+<h1> My Hobby</h1>
+<h4>One of my favorite series of books is I Survived. the books are historical-fiction, meaning that the characters' names are made-up but the events are real. the book tells about the tragedies in the past, for example, I Survived the Chicago Fire,
+    . ></h4>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VZhvbmqYniA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</br>
+</section>
+
+    <section id="Review">
+        <h1>the review of book 1: i survived the sinking of the titanic</h1>
+        <iframe width="560" height="315" src="https://www.kirkusreviews.com/book-reviews/lauren-tarshis/i-survived-1/" ></iframe>
     </section>
